Reproduce cypress reload issue

--- a/Sample-01/auth_config.json.example
+++ b/Sample-01/auth_config.json.example
@@ -2,7 +2,7 @@
   "domain": "{DOMAIN}",
   "clientId": "{CLIENT_ID}",
   "authorizationParams": {
-    "audience": "{API_IDENTIFIER}"
+    "audience": "backend"
   },
   "apiUri": "http://localhost:3001",
   "appUri": "http://localhost:4200",
