--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -9,6 +9,7 @@
     "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "cypress:open": "./node_modules/.bin/cypress open",
     "server:app": "node server.js",
     "server:api": "node api-server.js",
     "dev": "npm-run-all --parallel start server:api",
@@ -28,12 +29,13 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/auth0-angular": "^2.0.0",
-    "auth0-js": "^9.20.0",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@popperjs/core": "^2.11.6",
+    "auth0-js": "^9.20.0",
     "cors": "^2.8.5",
+    "cypress": "^12.4.0",
     "express": "^4.18.1",
     "express-oauth2-jwt-bearer": "^1.3.0",
     "helmet": "^4.6.0",
